Added reset password mailer

--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,5 +1,7 @@
 Hi <%= @user.name %>,
 
-Please follow the link below to complete your password reset request
+Please follow the link below to complete your password reset request.
 
-<%= @token %>
+<%= @reset_url %>
+
+If you did not request this password reset, please ignore this email.
