--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,28 @@
-<h1>Hi <%= @user.name %></h1>
-
-<p>Please follow the link below to complete your password reset request</p>
-
-<%= link_to "Reset Password", @token %>
+<table class="main" width="100%" cellpadding="0" cellspacing="0">
+  <tr>
+    <td class="content-wrap">
+      <table width="100%" cellpadding="0" cellspacing="0">
+        <tr>
+          <td class="content-block">
+            <strong>Hi <%= @user.name %>,</strong>
+          </td>
+        </tr>
+        <tr>
+          <td class="content-block">
+            Please follow the link below to complete your password reset request.
+          </td>
+        </tr>
+        <tr>
+          <td class="content-block">
+            <%= link_to "Reset Password", @reset_url, { class: "btn-primary"} %>
+          </td>
+        </tr>
+        <tr>
+          <td class="content-block">
+            If you did not request this password reset, please ignore this email.
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
